# prisoners_dilemma_wasm

./: Cargo.toml  README.md  build.rs  package-lock.json
pkg/: index.html  package.json  prisoners_dilemma.d.ts  prisoners_dilemma.js  prisoners_dilemma_bg.wasm  prisoners_dilemma_bg.wasm.d.ts
src/: lib.rs  simulation.rs
src/strategies/: AlwaysCooperate.rs  AlwaysDefect.rs  BetaTitForTat.rs  Extortionary.rs  GenerousTitForTat.rs  NPavlov.rs  Pavlov.rs  Random.rs  SuspiciousTitForTat.rs  TitForTat.rs  always_cooperate.rs  always_defect.rs  delayed_tit_for_tat.rs  mod.rs  random.rs  registry.rs
www/: index.js
